# jailmaker

./: LICENSE  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/jailmaker/: apps.py  constants.py  urls.py  views.py
backend/jailmaker/files/: matriz_2024_2.json  uppercase_matrix.py
backend/jailmaker/service/: grade_ideal_svc.py  historico_academico_svc.py  history_svc.py  matrix_svc.py  matriz_horaria_svc.py
frontend/jailmaker/: BadUpload .html  TelaInicial.html  UploadOK .html  botao1 .html  botao2 .html  index.html  package-lock.json  package.json  site.html
frontend/jailmaker/src/: App.vue  api.js
frontend/jailmaker/src/components/: AcademicHistory.vue  ClassSchedule.vue  LeitorHistoricoAcademico.vue
frontend/jailmaker/src/router/: index.js
frontend/jailmaker/src/views/: Home.vue  LeitorHistoricoAcademico.vue  MatrizHoraria.vue  MatrizSemestre.vue
